fixing double scrollbar bug with brand bar

--- a/less/bizo/brand-bar.less
+++ b/less/bizo/brand-bar.less
@@ -11,6 +11,10 @@ html#brand-bar-page {
     height: 100%; // allow iframe to take up entire page
   }
 
+  body {
+    overflow: hidden;
+  }
+
   iframe {
     display: block;
     border: none;
